# autosre

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  architecture.md  competitive-analysis.md  doanddonts.md  docker-compose.yml  features.md  pyproject.toml  tech-stack.md  technology.md  todo-claude.md  todo-mateen.md
.github/workflows/: ci.yml
collector/: otel-config.yaml
infrastructure/clickhouse/: migrate.py
infrastructure/clickhouse/migrations/: V001__create_database.sql  V002__spans_table.sql  V003__metrics_table.sql  V004__logs_table.sql  V005__features_table.sql  V006__anomaly_scores_table.sql  V007__incidents_table.sql  V008__cooldown_windows_table.sql  V009__model_registry_table.sql  V010__mv_trace_features.sql  V011__mv_metric_features.sql  V012__mv_log_features.sql
src/autosre/: __init__.py
src/autosre/alerting/: __init__.py  dispatcher.py
src/autosre/api/: __init__.py  app.py
src/autosre/cli/: __init__.py  main.py
src/autosre/collector/: __init__.py  features.py  parser.py
src/autosre/config/: __init__.py  schema.py
src/autosre/detection/: __init__.py  fusion.py  tuning.py
src/autosre/detection/ablation/: __init__.py  analyzer.py
src/autosre/detection/cooldown/: __init__.py  exclusion.py
src/autosre/detection/models/: __init__.py  base.py  classical.py  deep.py
src/autosre/detection/threshold/: __init__.py  finder.py
src/autosre/inference/: __init__.py  client.py
src/autosre/storage/: __init__.py  clickhouse.py
src/autosre/streaming/: __init__.py
tests/alerting/: __init__.py  test_dispatcher.py
tests/api/: test_app.py
tests/collector/: test_features.py
tests/detection/: test_cooldown.py  test_fusion.py  test_models.py  test_threshold.py
tests/inference/: test_client.py
tests/storage/: test_clickhouse.py
