[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosre"
version = "0.1.0"
description = "Research-backed, OTel-native anomaly detection for SRE teams"
license = "Apache-2.0"
authors = [{ name = "Mateen Ali Anjum", email = "mateen@phonotech.ca" }]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "sre",
    "anomaly-detection",
    "opentelemetry",
    "aiops",
    "observability",
    "cooldown",
    "streaming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "optuna>=3.6",
    "pyod>=2.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
storage = ["clickhouse-connect>=0.7"]
streaming = ["confluent-kafka>=2.5", "pysad>=0.2"]
alerting = ["slack-sdk>=3.30", "httpx>=0.27"]
serve = ["fastapi>=0.111", "uvicorn>=0.30", "httpx>=0.27"]
inference = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
autosre = "autosre.cli.main:app"

[project.urls]
Homepage = "https://autosre.dev"
Repository = "https://github.com/phonotechnologies/autosre"
Documentation = "https://autosre.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/autosre"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]  # Allow uppercase X, X_train etc. (ML convention)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -p no:asyncio"
